# rust-libraries

./: .git-blame-ignore-revs  .gitignore  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  deny.toml  release.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  (+2 more)
examples/: Cargo.toml
examples/src/: authz_demo.rs  config_server_demo.rs  core_demo.rs  data_demo.rs  discovery_demo.rs  error_demo.rs  i18n_demo.rs  main.rs  migrate_demo.rs  protocol_demo.rs  security_demo.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: aead_decrypt.rs  config_tree.rs  jwks.rs  jwt_decode.rs  oauth2_token_response.rs  oidc.rs  scim.rs
klauthed/: Cargo.toml  README.md
klauthed-cli/: Cargo.toml
klauthed-cli/src/: main.rs  scaffold.rs
klauthed-cli/templates/: Cargo.toml.tmpl  README.md.tmpl  config.default.toml.tmpl  main.jwt.rs.tmpl  main.rs.tmpl
klauthed-cli/tests/: scaffold.rs
klauthed-core/: Cargo.toml  README.md
klauthed-core/benches/: core_hot_paths.rs
klauthed-core/examples/: config_quickstart.rs
klauthed-core/examples/config/: app.toml
klauthed-core/src/: lib.rs  wiring.rs
klauthed-core/src/config/: binding.rs  builder.rs  config.rs  map.rs  mod.rs  profile.rs  reload.rs
klauthed-core/src/context/: ambient.rs  mod.rs  request_context.rs
klauthed-core/src/cqrs/: command.rs  error.rs  event.rs  mod.rs  query.rs  tests.rs
klauthed-core/src/domain/: aggregate.rs  entity.rs  event.rs  mod.rs
klauthed-core/src/error/: config_error.rs  mod.rs
klauthed-core/src/id/: error.rs  mod.rs  typed.rs
klauthed-core/src/time/: clock.rs  mod.rs  timestamp.rs  zone.rs
klauthed-core/src/validation/: errors.rs  mod.rs  validate.rs
klauthed-core/tests/: config.rs  context.rs  cqrs.rs  domain.rs  id.rs  time.rs  validation.rs
klauthed-data/: Cargo.toml  README.md
klauthed-data/benches/: cursor.rs
klauthed-data/examples/: local_storage.rs  memory_cache.rs
klauthed-data/src/: db.rs  error.rs  idempotency.rs  idempotency_redis.rs  lib.rs  locks.rs  migrate.rs  outbox.rs  outbox_sql.rs  starter.rs
klauthed-data/src/cache/: memory.rs  mod.rs  redis.rs
klauthed-data/src/db/: mod.rs  mongo.rs  mssql.rs
klauthed-data/src/error/: data_error.rs  mod.rs
klauthed-data/src/eventbus/: mod.rs
klauthed-data/src/idempotency/: mod.rs  mongo.rs  redis.rs
klauthed-data/src/locks/: mod.rs  mongo.rs  redis.rs
klauthed-data/src/messaging/: kafka.rs  mod.rs  nats.rs  rabbitmq.rs
klauthed-data/src/outbox/: mod.rs  mongo.rs  relay.rs  sql.rs
klauthed-data/src/pagination/: cursor.rs  keyset.rs  mod.rs  offset.rs  sql.rs
klauthed-data/src/rate_limit/: memory.rs  mod.rs  redis.rs
klauthed-data/src/saga/: mod.rs
klauthed-data/src/storage/: connect.rs  mod.rs
klauthed-data/src/transaction/: mod.rs  mongo.rs  noop.rs  sql.rs  transact.rs
klauthed-data/tests/: pagination.rs
klauthed-discovery/: Cargo.toml  README.md
klauthed-discovery/src/: agent.rs  consul.rs  error.rs  eureka.rs  instance.rs  kubernetes.rs  lib.rs  picker.rs  registry.rs
klauthed-error/: Cargo.toml  README.md
klauthed-error/examples/: error_kernel.rs
klauthed-error/src/: category.rs  lib.rs
klauthed-error/src/category/: error_category.rs  mod.rs
klauthed-error/src/code/: mod.rs
klauthed-error/tests/: error_kernel.rs
klauthed-i18n/: Cargo.toml  README.md
klauthed-i18n/examples/: translate.rs
klauthed-i18n/locales/: de.toml  en.toml  es.toml  fr.toml  it.toml  tr.toml
klauthed-i18n/src/: catalog.rs  error.rs  format.rs  lib.rs  locale.rs
klauthed-i18n/tests/: i18n.rs
klauthed-macros/: Cargo.toml  README.md
klauthed-macros/examples/: derive_domain_error.rs
klauthed-macros/src/: expand.rs  from_config.rs  lib.rs  parse.rs
klauthed-macros/tests/: domain_error.rs
klauthed-observability/: Cargo.toml  README.md
klauthed-observability/examples/: telemetry.rs
klauthed-observability/src/: config.rs  lib.rs  logging.rs  metrics.rs  otel.rs
klauthed-observability/src/config/: log.rs  metrics.rs  mod.rs  otel.rs  telemetry.rs
klauthed-observability/src/error/: mod.rs
klauthed-observability/src/logging/: init.rs  mod.rs
klauthed-observability/tests/: telemetry.rs  trace.rs
klauthed-platform/: Cargo.toml  README.md
klauthed-platform/examples/: platform_basics.rs
klauthed-platform/src/: audit.rs  cron.rs  featureflag.rs  jobs.rs  lib.rs  scheduler.rs  tenancy.rs  webhooks.rs
klauthed-platform/tests/: audit.rs  featureflag.rs  platform.rs  tenancy.rs  webhooks.rs
klauthed-protocol/: Cargo.toml  README.md
klauthed-protocol/examples/: discovery.rs
klauthed-protocol/src/: error.rs  jwks.rs  lib.rs  oauth2.rs  oidc.rs  scim.rs
klauthed-protocol/tests/: jwks.rs  oauth2.rs  oidc.rs  protocol.rs  scim.rs
klauthed-security/: Cargo.toml  README.md
klauthed-security/benches/: crypto.rs
klauthed-security/examples/: jwt_and_password.rs
klauthed-security/src/: aead.rs  apikey.rs  authz.rs  compare.rs  error.rs  jwt.rs  kdf.rs  lib.rs  mfa.rs  paseto.rs  password.rs  revocation.rs  session.rs  token.rs
klauthed-security/tests/: aead.rs  apikey.rs  asymmetric.rs  authz.rs  compare.rs  envelope.rs  error.rs  jwt.rs  kdf.rs  mfa.rs  passkey.rs  password.rs  policy.rs  revocation.rs  security.rs  session.rs  token.rs
klauthed-testing/: Cargo.toml  README.md
klauthed-testing/examples/: fixed_clock.rs
klauthed-testing/src/: assertions.rs  clock.rs  context.rs  error.rs  ids.rs  lib.rs  repository.rs
klauthed-testing/tests/: clock.rs
klauthed-web/: Cargo.toml  README.md
klauthed-web/examples/: auth_service.rs  server.rs
klauthed-web/src/: app.rs  auth.rs  context.rs  cors.rs  error.rs  extract.rs  health.rs  lib.rs  metrics.rs  openapi.rs  passkey.rs  ratelimit.rs  refresh.rs  response.rs  server.rs  starter.rs  trace.rs
klauthed-web/tests/: auth.rs  error.rs  health.rs  ratelimit.rs
klauthed/examples/: quickstart.rs
klauthed/src/: lib.rs
klauthed/tests/: umbrella.rs
reference-service/: Cargo.toml  README.md
reference-service/src/: main.rs
(+190 files in other folders)
