[package]
name = "klauthed-core"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives for klauthed: typed config, clock/time, request context, CQRS, domain, and validation."
readme = "README.md"
keywords = ["config", "cqrs", "clock", "context", "klauthed"]
categories = ["config", "data-structures"]

[dependencies]
klauthed-error.workspace = true
klauthed-macros.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
time.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true

# ── Optional: Vault provider (feature = "vault") ──────────────────────────────
reqwest = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
# ── Optional: ambient RequestContext (feature = "task-local") ─────────────────
tokio = { workspace = true, optional = true }
# ── Optional: IANA time-zone conversions (feature = "tz") ─────────────────────
time-tz = { workspace = true, optional = true }

[features]
# Vault is on by default so `Config::load()` / auto-build works in staging/prod
# out of the box. Opt out with `default-features = false` to keep core lean
# (drops the reqwest/secrecy dependencies) for services that never touch Vault.
default = ["vault"]
# Enables the HashiCorp Vault config provider (KV v2; Token/AppRole/Kubernetes auth).
vault = ["dep:reqwest", "dep:secrecy"]
# Enables the remote config-server provider (Spring Cloud Config Server-compatible).
config-server = ["dep:reqwest"]
# Enables the ambient (tokio task-local) RequestContext: current()/scope().
task-local = ["dep:tokio"]
# Enables ReloadableConfig: periodic re-resolve of the provider chain + change
# notifications (tokio watch/interval task).
hot-reload = ["dep:tokio"]
# Enables IANA time-zone conversion of `Timestamp` (time::zone::TimeZone).
tz = ["dep:time-tz"]

[dev-dependencies]
tokio = { workspace = true }
# HTTP mock server for the config-server provider tests (no live server needed).
wiremock = "0.6"
# Property-based tests for config-merge and id round-trip invariants.
proptest = { workspace = true }
# Micro-benchmarks for the config-merge and id hot paths.
criterion = { workspace = true }

[[bench]]
name = "core_hot_paths"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
