[package]
name = "klauthed-data"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Config types only — no need for the Vault provider here. The workspace entry
# sets default-features = false, so the lean (no-vault) core comes through.
klauthed-core.workspace = true
klauthed-error.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Reliability patterns (outbox / idempotency / locks) are async backend-agnostic
# traits, with serde_json payloads — these are always-on, not feature-gated.
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# Lock TTLs are chrono::Duration, matching klauthed_core::time's Clock API.
chrono.workspace = true
# base64 for cursor encoding; futures-util for BoxFuture in transact.
base64.workspace = true
futures-util.workspace = true

# Backend drivers, each pulled in only by its feature.
sqlx       = { workspace = true, optional = true }
redis      = { workspace = true, optional = true }
moka       = { workspace = true, optional = true }
async-nats = { version = "0.49", optional = true }
# lapin 4.x defaults to the tokio runtime + rustls, so no executor/reactor glue.
lapin      = { version = "4.10", optional = true }
# Pure-Rust Kafka client (no librdkafka / C toolchain needed).
rskafka    = { version = "0.6", optional = true }
# Unified object storage; default `fs` feature keeps local-only builds lean.
object_store = { version = "0.13", optional = true }
# MongoDB official driver (async, uses tokio).
mongodb    = { version = "3", optional = true }
# SQL Server (MSSQL) via tiberius + bb8 connection pool.
tiberius   = { version = "0.12", optional = true, default-features = false, features = ["rustls", "chrono"] }
tokio-util = { version = "0.7", optional = true, features = ["compat"] }
bb8        = { version = "0.9", optional = true }
bb8-tiberius = { version = "0.16", optional = true }

[features]
default = []

# ── Relational databases (sqlx, via the driver-agnostic Any pool) ─────────────
sql      = ["dep:sqlx", "sqlx/any"]
postgres = ["sql", "sqlx/postgres"]
mysql    = ["sql", "sqlx/mysql"]
sqlite   = ["sql", "sqlx/sqlite"]

# ── Cache backends ────────────────────────────────────────────────────────────
redis        = ["dep:redis"]
cache-memory = ["dep:moka"]

# ── Messaging backends ────────────────────────────────────────────────────────
nats     = ["dep:async-nats"]
rabbitmq = ["dep:lapin"]
kafka    = ["dep:rskafka"]

# ── Object storage (Local always; cloud backends opt-in) ──────────────────────
storage       = ["dep:object_store"]
storage-s3    = ["storage", "object_store/aws"]
storage-gcs   = ["storage", "object_store/gcp"]
storage-azure = ["storage", "object_store/azure"]

# ── NoSQL / alternative databases ────────────────────────────────────────────
mongodb = ["dep:mongodb"]
mssql   = ["dep:tiberius", "dep:tokio-util", "dep:bb8", "dep:bb8-tiberius"]

[dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "memory_cache"
required-features = ["cache-memory"]

[[example]]
name = "local_storage"
required-features = ["storage"]
