[package]
name = "klauthed-macros"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for klauthed, including #[derive(DomainError)]."
readme = "README.md"
keywords = ["derive", "macro", "proc-macro", "klauthed"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
heck.workspace = true

[dev-dependencies]
# The generated code references `::klauthed_error`; tests need it to compile.
klauthed-error.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
