[package]
name = "klauthed-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform services for klauthed: multi-tenancy, audit logging, webhooks, background jobs, and feature flags."
readme = "README.md"
keywords = ["tenancy", "audit", "webhooks", "jobs", "klauthed"]
categories = ["web-programming"]

[dependencies]
klauthed-core.workspace = true
klauthed-error.workspace = true
klauthed-macros.workspace = true

serde.workspace = true
# serde_json::Value is part of the public job/webhook payload API.
serde_json.workspace = true
async-trait.workspace = true

# Webhook HMAC signing (no hand-rolled crypto) and hex-encoding of signatures.
ring.workspace = true
hex.workspace = true

# For OutboxAuditSink: writes audit events to the SQL outbox.
klauthed-data = { path = "../klauthed-data", optional = true, default-features = false, features = ["sql", "sqlite"] }

# For HttpWebhookSender: real HTTP delivery of webhook events.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }

[features]
audit-outbox  = ["dep:klauthed-data"]
webhook-http  = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true }
# Required only by the `audit-outbox` SQLite integration tests; harmless otherwise.
sqlx = { workspace = true, features = ["sqlite"] }
