[package]
name = "klauthed-platform"
version = "0.9.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform services for klauthed: multi-tenancy, audit logging, webhooks, background jobs, and feature flags."
readme = "README.md"
keywords = ["tenancy", "audit", "webhooks", "jobs", "klauthed"]
categories = ["web-programming"]

[dependencies]
klauthed-core.workspace = true
klauthed-error.workspace = true
klauthed-macros.workspace = true

serde.workspace = true
# serde_json::Value is part of the public job/webhook payload API.
serde_json.workspace = true
async-trait.workspace = true

# Webhook HMAC signing (no hand-rolled crypto) and hex-encoding of signatures.
ring.workspace = true
hex.workspace = true

# For OutboxAuditSink: writes audit events to the SQL outbox.
# Use the workspace dependency (which carries `version`) so the crate is
# publishable; klauthed-data has no default features, so the feature set is
# unchanged.
klauthed-data = { workspace = true, optional = true, features = ["sql", "sqlite"] }

# For HttpWebhookSender: real HTTP delivery of webhook events.
reqwest = { version = "0.12", optional = true, default-features = false, features = ["json", "rustls-tls"] }

# Async runtime + civil-time math for the `scheduler` feature (recurring tasks,
# cron schedules).
tokio = { workspace = true, optional = true }
time = { workspace = true, optional = true }

# Durable SqlJobQueue (relational JobQueue over sqlx's AnyPool). The workspace
# sqlx carries the `postgres` driver; the SQLite driver comes from dev-deps for
# tests. Gated behind `jobs-sql`.
sqlx = { workspace = true, optional = true }

[features]
audit-outbox  = ["dep:klauthed-data"]
webhook-http  = ["dep:reqwest"]
# In-process interval + cron scheduler for recurring background tasks.
# `klauthed-core/tz` powers timezone-aware cron schedules.
scheduler     = ["dep:tokio", "dep:time", "klauthed-core/tz"]
# Durable, relational JobQueue (`SqlJobQueue`) over sqlx. The Postgres
# `FOR UPDATE SKIP LOCKED` claim path is exercised by the CI integration job.
jobs-sql      = ["dep:sqlx"]

[dev-dependencies]
# `test-util` enables `#[tokio::test(start_paused = true)]` for the scheduler tests.
tokio = { workspace = true, features = ["test-util"] }
# Required only by the `audit-outbox` SQLite integration tests; harmless otherwise.
sqlx = { workspace = true, features = ["sqlite"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
